@@ -24,9 +24,10 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
+import java.io.IOException;
+import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,8 +47,23 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @WithMockUser(roles = "ADMIN")
 public class ProductControllerTests {
 
-    public static final Path TEST_IMAGE_PATH_1 = Paths.get("src/test/resources/test_image_1.jpeg");
-    public static final Path TEST_IMAGE_PATH_2 = Paths.get("src/test/resources/test_image_2.jpeg");
+    public static final MockMultipartFile TEST_IMAGE_1;
+    public static final MockMultipartFile TEST_IMAGE_2;
+
+    static {
+        try {
+            TEST_IMAGE_1 = new MockMultipartFile(
+                    "images", "test_image_1.jpeg", "image/jpeg",
+                    Files.readAllBytes(Path.of("src/test/resources/test_image_1.jpeg"))
+            );
+            TEST_IMAGE_2 = new MockMultipartFile(
+                    "images", "test_image_2.jpeg", "image/jpeg",
+                    Files.readAllBytes(Path.of("src/test/resources/test_image_2.jpeg"))
+            );
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
 
     @Autowired
     private MockMvc mockMvc;
@@ -201,7 +217,31 @@ public class ProductControllerTests {
                 productResponseA.getSeller().getId()
         )).thenReturn(pageResponse);
 
-        MvcResult mvcResult = mockMvc.perform(get("/api/products/user/" + productResponseA.getSeller().getId()))
+        MvcResult mvcResult = mockMvc.perform(get("/api/products/users/" + productResponseA.getSeller().getId()))
+                .andExpect(status().isOk())
+                .andReturn();
+        String jsonResponse = mvcResult.getResponse().getContentAsString();
+
+        assertThat(jsonResponse).isEqualTo(objectMapper.writeValueAsString(pageResponse));
+    }
+
+    @Test
+    public void shouldFindAllProductsBySellerIdAndKeyword() throws Exception {
+        PageResponse<ProductResponse> pageResponse = new PageResponse<>(
+                List.of(productResponseA),
+                AppConstants.PAGE_NUMBER_INT, AppConstants.PAGE_SIZE_INT,
+                1, 1,
+                true, true
+        );
+
+        when(productService.findAllBySellerIdAndKeyword(
+                eq(AppConstants.PAGE_NUMBER_INT), eq(AppConstants.PAGE_SIZE_INT),
+                eq(AppConstants.SORT_PRODUCTS_BY), eq(AppConstants.SORT_DIR),
+                eq(productResponseA.getSeller().getId()), eq("Test product")
+        )).thenReturn(pageResponse);
+
+        MvcResult mvcResult = mockMvc.perform(
+                        get("/api/products/users/" + productResponseA.getSeller().getId() + "?search=Test product"))
                 .andExpect(status().isOk())
                 .andReturn();
         String jsonResponse = mvcResult.getResponse().getContentAsString();
@@ -224,7 +264,7 @@ public class ProductControllerTests {
                 eq(productRequestA.getCategoryId()), any(Authentication.class)
         )).thenReturn(pageResponse);
 
-        MvcResult mvcResult = mockMvc.perform(get("/api/products/category/" + productRequestA.getCategoryId()))
+        MvcResult mvcResult = mockMvc.perform(get("/api/products/categories/" + productRequestA.getCategoryId()))
                 .andExpect(status().isOk())
                 .andReturn();
         String jsonResponse = mvcResult.getResponse().getContentAsString();
@@ -248,7 +288,7 @@ public class ProductControllerTests {
         )).thenReturn(pageResponse);
 
         MvcResult mvcResult = mockMvc.perform(
-                        get("/api/products/category/" + productRequestA.getCategoryId() + "?search=Test product"))
+                        get("/api/products/categories/" + productRequestA.getCategoryId() + "?search=Test product"))
                 .andExpect(status().isOk())
                 .andReturn();
         String jsonResponse = mvcResult.getResponse().getContentAsString();
@@ -258,16 +298,25 @@ public class ProductControllerTests {
 
     @Test
     public void shouldUpdateProductWhenValidRequest() throws Exception {
-        productRequestA.setName("Updated product name");
-        productResponseA.setName("Updated product name");
+        ProductUpdateRequest productUpdateRequest = ProductUpdateRequest.builder()
+                .name("Updated test product A")
+                .description("Updated description A")
+                .price(BigDecimal.valueOf(10.0))
+                .productCondition(ProductCondition.NEW)
+                .availableQuantity(2)
+                .categoryId(productRequestA.getCategoryId())
+                .isDeleted(false)
+                .build();
+        productResponseA.setName("Updated test product A");
+        productRequestA.setDescription("Updated description A");
 
         when(productService.update(
-                any(ProductRequest.class), eq(productRequestA.getId()), any(Authentication.class))
+                any(ProductUpdateRequest.class), eq(productRequestA.getId()), any(Authentication.class))
         ).thenReturn(productResponseA);
 
-        MvcResult mvcResult = mockMvc.perform(put("/api/products/" + productRequestA.getId())
+        MvcResult mvcResult = mockMvc.perform(patch("/api/products/" + productRequestA.getId())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(productRequestA))
+                .content(objectMapper.writeValueAsString(productUpdateRequest))
         ).andExpect(status().isOk()).andReturn();
         String jsonResponse = mvcResult.getResponse().getContentAsString();
 
@@ -276,24 +325,18 @@ public class ProductControllerTests {
 
     @Test
     public void shouldUploadProductImages() throws Exception {
-        MockMultipartFile image1 = new MockMultipartFile(
-                "images", "test_image_1.jpeg",
-                "image/jpeg", Files.readAllBytes(TEST_IMAGE_PATH_1)
-        );
-        MockMultipartFile image2 = new MockMultipartFile(
-                "images", "test_image_2.jpeg",
-                "image/jpeg", Files.readAllBytes(TEST_IMAGE_PATH_2)
-        );
         productResponseA.setImages(List.of(
                 new ProductImageResponse(
                         1,
-                        Files.readAllBytes(TEST_IMAGE_PATH_1),
-                        false
+                        TEST_IMAGE_1.getOriginalFilename(),
+                        TEST_IMAGE_1.getContentType(),
+                        TEST_IMAGE_1.getBytes()
                 ),
                 new ProductImageResponse(
                         2,
-                        Files.readAllBytes(TEST_IMAGE_PATH_2),
-                        false
+                        TEST_IMAGE_2.getOriginalFilename(),
+                        TEST_IMAGE_2.getContentType(),
+                        TEST_IMAGE_2.getBytes()
                 )
         ));
 
@@ -301,33 +344,12 @@ public class ProductControllerTests {
                 .thenReturn(productResponseA);
 
         MvcResult result = mockMvc.perform(multipart("/api/products/" + productRequestA.getId() + "/images")
-                .file(image1)
-                .file(image2)
+                .file(TEST_IMAGE_1)
+                .file(TEST_IMAGE_2)
                 .contentType(MediaType.MULTIPART_FORM_DATA)
                 .with(request -> { request.setMethod("PUT"); return request; })
         ).andExpect(status().isOk()).andReturn();
         String jsonResponse = result.getResponse().getContentAsString();
-
-        assertThat(jsonResponse).isEqualTo(objectMapper.writeValueAsString(productResponseA));
-    }
-
-    @Test
-    public void shouldDisplayImage() throws Exception {
-        productResponseA.setImages(List.of(
-                new ProductImageResponse(
-                        1,
-                        Files.readAllBytes(TEST_IMAGE_PATH_1),
-                        true
-                )
-        ));
-
-        when(productService.displayImage(eq(productRequestA.getId()), eq(1), any(Authentication.class)))
-                .thenReturn(productResponseA);
-
-        MvcResult mvcResult = mockMvc.perform(
-                patch("/api/products/{product-id}/images/{image-id}/set-display", productRequestA.getId(), 1)
-        ).andExpect(status().isOk()).andReturn();
-        String jsonResponse = mvcResult.getResponse().getContentAsString();
 
         assertThat(jsonResponse).isEqualTo(objectMapper.writeValueAsString(productResponseA));
     }
